# shopy

./: .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  main.py  manage.py  pyproject.toml  requirements.txt
.github/workflows/: pr.yml
.hooks/: one-commit-per-pr.sh
alembic/: env.py
alembic/versions/: 4d0e63a35e1a_.py  cc4f23604aab_.py
api/: app.py  utils.py
api/depends/: container_manager.py
shopy/common/: settings.py
shopy/common/containers/: custom_containers.py  main_container.py
shopy/common/domain/: entity.py  unit_of_work.py
shopy/common/infrastructure/: database.py  mappers.py  unit_of_work.py
shopy/order/adapter/: inmemory_order_repository.py
shopy/order/domain/: order.py  order_product.py  order_product_repository.py  order_repository.py
shopy/product/adapter/: inmemory_product_repository.py
shopy/product/domain/: product.py  product_repository.py
shopy/user/adapter/: inmemory_user_repository.py  mapper.py  user_repository_sqlalchemy.py  user_table.py
shopy/user/application/container/: user_container.py
shopy/user/application/services/: create.py
shopy/user/domain/: user.py  user_repository.py
shopy/user/domain/schemes/: user_scheme.py
tests/: conftest.py
tests/e2e/user/: test_get_user.py  test_post_users.py  test_user.py
tests/factories/: order.py  product.py  user.py
tests/integration/: conftest.py
tests/integration/common/: test_main_container.py  test_unit_of_work.py
tests/integration/order/: test_inmemory_order_repository.py
tests/integration/product/: test_inmemory_product_repository.py
tests/integration/user/: test_inmemory_user_repository.py  test_sqlalchemy_user_repository.py  test_user_container.py
tests/unit/common/: test_database.py
tests/unit/order/: test_order.py  test_order_product.py
tests/unit/product/: test_product.py
tests/unit/user/: test_user.py
